GearsetPOC/force-app/main/default/objects/Case/fields/Class_Return_Journey__c.field-meta.xml
<CustomField>
    <fullName>Class_Return_Journey__c</fullName>
    <description>Class of the Return Journey</description>
    <inlineHelpText>Class of the Return Journey</inlineHelpText>
    <label>Class (Return)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Standard Premier</fullName>
            </value>
            <value>
                <fullName>Comfort</fullName>
            </value>
            <value>
                <fullName>Business Premier</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Eurostar Standard</fullName>
            </value>
            <value>
                <fullName>Eurostar Plus</fullName>
            </value>
            <value>
                <fullName>Eurostar Premier</fullName>
            </value>
            <value>
                <fullName>Combination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>