GearsetPOC/force-app/main/default/objects/Case/fields/Closed_Hour__c.field-meta.xml
<CustomField>
    <fullName>Closed_Hour__c</fullName>
    <formula>VALUE( MID(TEXT(ClosedDate),12,2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Hour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>