GearsetPOC/force-app/main/default/objects/Case/fields/Code_1__c.field-meta.xml
<CustomField>
    <fullName>Code_1__c</fullName>
    <formula>Reason_Code__r.Reason_Code_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code 1</label>
    <type>Text</type>
</CustomField>