GearsetPOC/force-app/main/default/objects/Case/fields/Code_2__c.field-meta.xml
<CustomField>
    <fullName>Code_2__c</fullName>
    <formula>Reason_Code__r.Reason_Code_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code 2</label>
    <type>Text</type>
</CustomField>