GearsetPOC/force-app/main/default/objects/Case/fields/Code_3__c.field-meta.xml
<CustomField>
    <fullName>Code_3__c</fullName>
    <formula>Reason_Code__r.Reason_Code_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code 3</label>
    <type>Text</type>
</CustomField>