GearsetPOC/force-app/main/default/objects/Case/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Name</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.Tone_of_Contact__c</field>
            <operation>notEqual</operation>
            <value>Complaint</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Trade_Contracts_Company__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>