GearsetPOC/force-app/main/default/objects/Case/fields/Compensation_Amt__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Amt__c</fullName>
    <label>Compensation Amt</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>