GearsetPOC/force-app/main/default/objects/Case/fields/Compensation_Currency__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Currency__c</fullName>
    <label>Compensation Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>