GearsetPOC/force-app/main/default/objects/Case/fields/Connection_Arrival_Time_Outward__c.field-meta.xml
<CustomField>
    <fullName>Connection_Arrival_Time_Outward__c</fullName>
    <label>Connection Arrival Time (Outward)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>