GearsetPOC/force-app/main/default/objects/Case/fields/Connection_Arrival_Time_Return__c.field-meta.xml
<CustomField>
    <fullName>Connection_Arrival_Time_Return__c</fullName>
    <label>Connection Arrival Time (Return)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>