GearsetPOC/force-app/main/default/objects/Case/fields/Contact_From__c.field-meta.xml
<CustomField>
    <fullName>Contact_From__c</fullName>
    <label>Contact From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Communication Centre</fullName>
            </value>
            <value>
                <fullName>Customer Resolution</fullName>
            </value>
            <value>
                <fullName>Loyalty</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Specialist Sales</fullName>
            </value>
            <value>
                <fullName>Commercial Support</fullName>
            </value>
            <value>
                <fullName>Insight &amp; Improvement</fullName>
            </value>
            <value>
                <fullName>Coaching</fullName>
            </value>
            <value>
                <fullName>General Advisor</fullName>
            </value>
            <value>
                <fullName>Department Managers</fullName>
            </value>
            <value>
                <fullName>Senior Managers</fullName>
            </value>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Webhelp</fullName>
            </value>
            <value>
                <fullName>Advisor Requests (Outside Lockdown)</fullName>
                <isActive>false</isActive>
                <label>Advisor Requests (Outside Lockdown)</label>
            </value>
            <value>
                <fullName>Advisor Requests (Within Lockdown)</fullName>
                <isActive>false</isActive>
                <label>Advisor Requests (Within Lockdown)</label>
            </value>
            <value>
                <fullName>Department Manager Requests (Outside Lockdown)</fullName>
                <isActive>false</isActive>
                <label>Department Manager Requests (Outside Lockdown)</label>
            </value>
            <value>
                <fullName>Department Manager Requests (Within Lockdown)</fullName>
                <isActive>false</isActive>
                <label>Department Manager Requests (Within Lockdown)</label>
            </value>
            <value>
                <fullName>London (Outside Lockdown)</fullName>
                <isActive>false</isActive>
                <label>London (Outside Lockdown)</label>
            </value>
            <value>
                <fullName>London (Within Lockdown)</fullName>
                <isActive>false</isActive>
                <label>London (Within Lockdown)</label>
            </value>
            <value>
                <fullName>QA (Outside Lockdown)</fullName>
                <isActive>false</isActive>
                <label>QA (Outside Lockdown)</label>
            </value>
            <value>
                <fullName>QA (Within Lockdown)</fullName>
                <isActive>false</isActive>
                <label>QA (Within Lockdown)</label>
            </value>
            <value>
                <fullName>Senior Management (Outside Lockdown)</fullName>
                <isActive>false</isActive>
                <label>Senior Management (Outside Lockdown)</label>
            </value>
            <value>
                <fullName>Senior Management (Within Lockdown)</fullName>
                <isActive>false</isActive>
                <label>Senior Management (Within Lockdown)</label>
            </value>
            <value>
                <fullName>Shift Leaders (Outside Lockdown)</fullName>
                <isActive>false</isActive>
                <label>Shift Leaders (Outside Lockdown)</label>
            </value>
            <value>
                <fullName>Shift Leaders (Within Lockdown)</fullName>
                <isActive>false</isActive>
                <label>Shift Leaders (Within Lockdown)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>