GearsetPOC/force-app/main/default/objects/Case/fields/Contact_Times_arrival__c.field-meta.xml
<CustomField>
    <fullName>Contact_Times_arrival__c</fullName>
    <label>Contact Times (arrival)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>