GearsetPOC/force-app/main/default/objects/Case/fields/Contacted__c.field-meta.xml
<CustomField>
    <fullName>Contacted__c</fullName>
    <label>Contacted?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contacted – Telephone</fullName>
            </value>
            <value>
                <fullName>No - voicemail and email follow up sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>