GearsetPOC/force-app/main/default/objects/Case/fields/Contractor__c.field-meta.xml
<CustomField>
    <fullName>Contractor__c</fullName>
    <label>Contractor (departure)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>