GearsetPOC/force-app/main/default/objects/Case/fields/Contractor_arrival__c.field-meta.xml
<CustomField>
    <fullName>Contractor_arrival__c</fullName>
    <label>Contractor (arrival)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>