GearsetPOC/force-app/main/default/objects/Case/fields/Converted_From_Site__c.field-meta.xml
<CustomField>
    <fullName>Converted_From_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Converted From Public Site - Groups or Contact us form</description>
    <label>Converted From Site</label>
    <type>Checkbox</type>
</CustomField>