GearsetPOC/force-app/main/default/objects/Case/fields/Country_State_Region__c.field-meta.xml
<CustomField>
    <fullName>Country_State_Region__c</fullName>
    <label>Country State Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>