GearsetPOC/force-app/main/default/objects/Case/fields/COVID_Error_Category__c.field-meta.xml
<CustomField>
    <fullName>COVID_Error_Category__c</fullName>
    <label>COVID Error Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invalid Claim Email - incorrect email</fullName>
            </value>
            <value>
                <fullName>Group Bookings</fullName>
            </value>
            <value>
                <fullName>Package Bookings</fullName>
            </value>
            <value>
                <fullName>RDG Interlining Bookings</fullName>
            </value>
            <value>
                <fullName>Zero Value Bookings</fullName>
            </value>
            <value>
                <fullName>No Exclusion</fullName>
            </value>
            <value>
                <fullName>Partial Bookings</fullName>
            </value>
            <value>
                <fullName>Out of Scope</fullName>
            </value>
            <value>
                <fullName>PNR Not Valid</fullName>
            </value>
            <value>
                <fullName>Unsupported Currency</fullName>
            </value>
            <value>
                <fullName>No Email on Booking</fullName>
            </value>
            <value>
                <fullName>Interlining Bookings</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Red Queue</fullName>
            </value>
            <value>
                <fullName>Already Compensated</fullName>
            </value>
            <value>
                <fullName>No Exclusion - Eligible</fullName>
            </value>
            <value>
                <fullName>RIT Bookings</fullName>
            </value>
            <value>
                <fullName>Non Eurostar POS</fullName>
            </value>
            <value>
                <fullName>Wheelchair Bookings</fullName>
            </value>
            <value>
                <fullName>Invalid Claim Email</fullName>
                <isActive>false</isActive>
                <label>Invalid Claim Email</label>
            </value>
            <value>
                <fullName>Invalid Claim Email - no booking email</fullName>
                <isActive>false</isActive>
                <label>Invalid Claim Email - no booking email</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>