GearsetPOC/force-app/main/default/objects/Case/fields/CRE__c.field-meta.xml
<CustomField>
    <fullName>CRE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CRE</label>
    <type>Checkbox</type>
</CustomField>