GearsetPOC/force-app/main/default/objects/Case/fields/Credit_card_amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_card_amount__c</fullName>
    <label>Credit card amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>