GearsetPOC/force-app/main/default/objects/Case/fields/CRM_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>CRM_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CRM Email Sent</label>
    <type>Checkbox</type>
</CustomField>