GearsetPOC/force-app/main/default/objects/Case/fields/CSAT_Survey_Sent__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Survey_Sent__c</fullName>
    <label>CSAT Survey Sent</label>
    <type>Date</type>
</CustomField>