GearsetPOC/force-app/main/default/objects/Case/fields/Current_User_Service__c.field-meta.xml
<CustomField>
    <fullName>Current_User_Service__c</fullName>
    <formula>TEXT( $User.Train_Service__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User Service</label>
    <type>Text</type>
</CustomField>