GearsetPOC/force-app/main/default/objects/Case/fields/Customer_Agrees_To_Marketing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Agrees_To_Marketing_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Agrees To Marketing Contact</label>
    <type>Checkbox</type>
</CustomField>