GearsetPOC/force-app/main/default/objects/Case/fields/Customer_Already_Checked_Online__c.field-meta.xml
<CustomField>
    <fullName>Customer_Already_Checked_Online__c</fullName>
    <label>Customer Already Checked Online</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown / Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>