GearsetPOC/force-app/main/default/objects/Case/fields/Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email__c</fullName>
    <formula>Contact.Customer_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Email</label>
    <type>Text</type>
</CustomField>