GearsetPOC/force-app/main/default/objects/Case/fields/Customer_emoticon__c.field-meta.xml
<CustomField>
    <fullName>Customer_emoticon__c</fullName>
    <formula>IF(   (TEXT( Customer_emoticon_value__c ) ==&quot;&quot;)  ,&quot;&quot; ,IMAGE( &quot;resource/pkb_mobile/imgs/&quot;+TEXT( Customer_emoticon_value__c ) +&quot;.png&quot; ,TEXT( Customer_emoticon_value__c )  ,20,20))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How the customer was feeling when he enter the support case.</inlineHelpText>
    <label>Customer emoticon</label>
    <type>Text</type>
</CustomField>