GearsetPOC/force-app/main/default/objects/Case/fields/Customer_Fraud_Flag__c.field-meta.xml
<CustomField>
    <fullName>Customer_Fraud_Flag__c</fullName>
    <formula>Account.Fraud_Flag__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Fraud Flag</label>
    <type>Text</type>
</CustomField>