GearsetPOC/force-app/main/default/objects/Case/fields/Customer_Impact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Impact__c</fullName>
    <label>Customer Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>Medium;Low</fullName>
                <isActive>false</isActive>
                <label>Medium;Low</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>