GearsetPOC/force-app/main/default/objects/Case/fields/Customer_Issue__c.field-meta.xml
<CustomField>
    <fullName>Customer_Issue__c</fullName>
    <label>Customer Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Booking Horizon</fullName>
            </value>
            <value>
                <fullName>Can&#39;t see comp points on account</fullName>
            </value>
            <value>
                <fullName>Chasing Comp Or Refund</fullName>
            </value>
            <value>
                <fullName>Dates &amp; Times</fullName>
            </value>
            <value>
                <fullName>Death Or Illness Or Injury</fullName>
            </value>
            <value>
                <fullName>Destinations</fullName>
            </value>
            <value>
                <fullName>Don&#39;t Agree With Comp Awarded</fullName>
            </value>
            <value>
                <fullName>Don&#39;t Have Ticket Numbers Or Correct Details</fullName>
            </value>
            <value>
                <fullName>Double Booking</fullName>
            </value>
            <value>
                <fullName>Meals</fullName>
            </value>
            <value>
                <fullName>Missed Departure</fullName>
            </value>
            <value>
                <fullName>Passport or Visa Issue</fullName>
            </value>
            <value>
                <fullName>Plans Changed</fullName>
            </value>
            <value>
                <fullName>Points awarded to wrong account</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Price/points cost</fullName>
            </value>
            <value>
                <fullName>Seats</fullName>
            </value>
            <value>
                <fullName>Ticket Type Or Class</fullName>
            </value>
            <value>
                <fullName>Unhappy With Seats</fullName>
            </value>
            <value>
                <fullName>Want To Change Comp Type</fullName>
            </value>
            <value>
                <fullName>Wrong Date</fullName>
            </value>
            <value>
                <fullName>Wrong Destination Or Wrong Way Round</fullName>
            </value>
            <value>
                <fullName>Wrong Journey Or Ticket Details</fullName>
            </value>
            <value>
                <fullName>Wrong Name</fullName>
            </value>
            <value>
                <fullName>Wrong Passenger Or Name</fullName>
            </value>
            <value>
                <fullName>Wrong Personal Details (DOB or Email orPhone)</fullName>
                <label>Wrong Personal Details (DOB/Email/Phone/Membership number)</label>
            </value>
            <value>
                <fullName>Wrong Product</fullName>
            </value>
            <value>
                <fullName>Wrong Ticket Types Or Class</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>