GearsetPOC/force-app/main/default/objects/Case/fields/Customer_Loyalty_Tier__c.field-meta.xml
<CustomField>
    <fullName>Customer_Loyalty_Tier__c</fullName>
    <formula>TEXT(Account.Delta_Loyalty_Tier__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Loyalty Tier</label>
    <type>Text</type>
</CustomField>