GearsetPOC/force-app/main/default/objects/Case/fields/Customer_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name_Formula__c</fullName>
    <formula>IF((RecordTypeId = &quot;012b0000000cfTq&quot; &amp;&amp; ISBLANK(Customer_Name__c )), Social_Persona__r.RealName, 
IF((RecordTypeId = &quot;012b0000000cfTq&quot; &amp;&amp; NOT(ISBLANK(Customer_Name__c ))),  Customer_Name__c , 
Contact.FirstName + &quot; &quot; +  Contact.LastName)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>