GearsetPOC/force-app/main/default/objects/Case/fields/Customer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Customer_Phone__c</fullName>
    <description>Default field refers to Account.Phone, this field takes the Phone number from the Contact.Home Phone</description>
    <formula>Contact.HomePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Phone</label>
    <type>Text</type>
</CustomField>