GearsetPOC/force-app/main/default/objects/Case/fields/Customer_Struggle__c.field-meta.xml
<CustomField>
    <fullName>Customer_Struggle__c</fullName>
    <label>Customer Struggle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Can&#39;t Get Seats Together</fullName>
            </value>
            <value>
                <fullName>Couldn&#39;t Find</fullName>
            </value>
            <value>
                <fullName>Couldn&#39;t Find The Right Meal</fullName>
            </value>
            <value>
                <fullName>Customer error</fullName>
            </value>
            <value>
                <fullName>Customer giving feedback</fullName>
            </value>
            <value>
                <fullName>Customer Room Booking</fullName>
            </value>
            <value>
                <fullName>Didn&#39;t Know This Was Online</fullName>
            </value>
            <value>
                <fullName>Didn&#39;t Receive A Confirmation</fullName>
            </value>
            <value>
                <fullName>Didn&#39;t understand</fullName>
            </value>
            <value>
                <fullName>Didn&#39;t Understand Compensation</fullName>
            </value>
            <value>
                <fullName>Didn&#39;t Understand The Seat Plan</fullName>
            </value>
            <value>
                <fullName>Don&#39;t Understand How To Do This Online</fullName>
            </value>
            <value>
                <fullName>Don&#39;t Understand Refund Options</fullName>
            </value>
            <value>
                <fullName>Don&#39;t Understand Terms &amp; Conditions</fullName>
            </value>
            <value>
                <fullName>Don&#39;t Understand The Price Or Fees</fullName>
            </value>
            <value>
                <fullName>Don&#39;t Want To Do This Online</fullName>
            </value>
            <value>
                <fullName>Don&#39;t Want To Use Website Or No Access To Website</fullName>
            </value>
            <value>
                <fullName>Eurostar Error</fullName>
            </value>
            <value>
                <fullName>Failed To Add Meal</fullName>
            </value>
            <value>
                <fullName>Form Of Payment Not Online</fullName>
            </value>
            <value>
                <fullName>Needed A Recap Or Reassurance</fullName>
            </value>
            <value>
                <fullName>Need More Information</fullName>
            </value>
            <value>
                <fullName>No self service option</fullName>
            </value>
            <value>
                <fullName>Not An Online Product</fullName>
            </value>
            <value>
                <fullName>Not An Online Product Or Not Refundable Online</fullName>
            </value>
            <value>
                <fullName>Outside Booking Horizon</fullName>
            </value>
            <value>
                <fullName>Overbooked Seat</fullName>
            </value>
            <value>
                <fullName>Phone Case - please complete</fullName>
            </value>
            <value>
                <fullName>Point Of Sale Prevents Self Service</fullName>
            </value>
            <value>
                <fullName>System - please review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>