GearsetPOC/force-app/main/default/objects/Case/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Loyalty</fullName>
            </value>
            <value>
                <fullName>Trade</fullName>
            </value>
            <value>
                <fullName>Special Assistance</fullName>
            </value>
            <value>
                <fullName>Packages or Hotels</fullName>
            </value>
            <value>
                <fullName>Eurodespatch</fullName>
            </value>
            <value>
                <fullName>Feedback</fullName>
            </value>
            <value>
                <fullName>No Customer</fullName>
            </value>
            <value>
                <fullName>Phone - please complete</fullName>
            </value>
            <value>
                <fullName>Social media - please review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>