GearsetPOC/force-app/main/default/objects/Case/fields/Date_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Closed__c</fullName>
    <formula>ClosedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Closed</label>
    <type>Date</type>
</CustomField>