GearsetPOC/force-app/main/default/objects/Case/fields/Date_Queued__c.field-meta.xml
<CustomField>
    <fullName>Date_Queued__c</fullName>
    <description>Date and time when case was assigned to queue last time</description>
    <label>Date Queued</label>
    <type>DateTime</type>
</CustomField>