GearsetPOC/force-app/main/default/objects/Case/fields/Date_Time_First_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_First_Closed__c</fullName>
    <label>Date/Time First Closed</label>
    <type>DateTime</type>
</CustomField>