GearsetPOC/force-app/main/default/objects/Case/fields/Date_to_be_Reopened__c.field-meta.xml
<CustomField>
    <fullName>Date_to_be_Reopened__c</fullName>
    <label>Date to be Reopened</label>
    <type>Date</type>
</CustomField>