GearsetPOC/force-app/main/default/objects/Case/fields/Days_Since_Last_Contact__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Contact__c</fullName>
    <formula>TODAY()- Last_Contact_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>