GearsetPOC/force-app/main/default/objects/Case/fields/Days_Since_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Modified__c</fullName>
    <formula>(NOW()- LastModifiedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days since last modified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>