GearsetPOC/force-app/main/default/objects/Case/fields/Delay_Duration_Mins__c.field-meta.xml
<CustomField>
    <fullName>Delay_Duration_Mins__c</fullName>
    <label>Delay Duration (Mins)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>