GearsetPOC/force-app/main/default/objects/Case/fields/Delay_Reason__c.field-meta.xml
<CustomField>
    <fullName>Delay_Reason__c</fullName>
    <description>Created to support Text Body Functionality</description>
    <label>Delay Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>