GearsetPOC/force-app/main/default/objects/Case/fields/Department_type__c.field-meta.xml
<CustomField>
    <fullName>Department_type__c</fullName>
    <description>What department is this relevant to?</description>
    <label>Department type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>--None--</fullName>
                <isActive>false</isActive>
                <label>--None--</label>
            </value>
            <value>
                <fullName>Sales Cloud</fullName>
                <isActive>false</isActive>
                <label>Sales Cloud</label>
            </value>
            <value>
                <fullName>Salesforce/Starlight</fullName>
                <isActive>false</isActive>
                <label>Salesforce/Starlight</label>
            </value>
            <value>
                <fullName>Service Cloud</fullName>
                <isActive>false</isActive>
                <label>Service Cloud</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>