GearsetPOC/force-app/main/default/objects/Case/fields/Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date__c</fullName>
    <description>Supplied as a part of CoronaVirus webform voucher compensation request</description>
    <label>TCN/Train Departure date</label>
    <type>Date</type>
</CustomField>