GearsetPOC/force-app/main/default/objects/Case/fields/Departure_DATE_O__c.field-meta.xml
<CustomField>
    <fullName>Departure_DATE_O__c</fullName>
    <description>Departure Date of the Outward Journey</description>
    <inlineHelpText>Departure Date of the Outward Journey</inlineHelpText>
    <label>Departure DATE (Outward)</label>
    <type>Date</type>
</CustomField>