GearsetPOC/force-app/main/default/objects/Case/fields/Departure_DATE_R__c.field-meta.xml
<CustomField>
    <fullName>Departure_DATE_R__c</fullName>
    <description>Departure Date of the Return Journey</description>
    <inlineHelpText>Departure Date of the Return Journey</inlineHelpText>
    <label>Departure DATE (Return)</label>
    <type>Date</type>
</CustomField>