GearsetPOC/force-app/main/default/objects/Case/fields/Departure_Date_Time_Return__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date_Time_Return__c</fullName>
    <defaultValue>&quot;--/--/---- --:--&quot;</defaultValue>
    <description>Departure Date and Time of the Return Journey 
Is used to be displayed on email Templates 
This field is a Text field because a Date/Time field cannot manage the DST time during summer and it creates major issues</description>
    <inlineHelpText>Departure Date and Time of the Return Journey 
Is used to be displayed on email Templates 
This field is a Text field because a Date/Time field cannot manage the DST time during summer and it creates major issues</inlineHelpText>
    <label>Departure Date/Time (Return)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>